workloadv2.yaml
##################################################################################################

# Main  service receiving response from ingress

##################################################################################################

apiVersion: v1

kind: Service

metadata:

  name: kube-canary-app

  labels:

    app: kube-canary-app

spec:

  ports:

  - port: 8080

    name: http

  selector:

    app: kube-canary-app

---

apiVersion: extensions/v1beta1

kind: Deployment

metadata:

  name: kube-canary-app-deployment-v1

spec:

  replicas: 1

  template: # template for the pods

    metadata:

      labels:

        app: kube-canary-app

        version: v1

    spec:

      containers:

      - name: kube-canary-app

        image: pmusale/istiocanary:1.0

        imagePullPolicy: Always

        ports:

        - containerPort: 8080

---

##################################################################################################

# Hello message services being called by main service

##################################################################################################

apiVersion: v1

kind: Service

metadata:

  name: hello-message-app

  labels:

    app: hello-message-app

spec:

  ports:

  - port: 8888

    name: http

  selector:

    app: hello-message-app

  type: ClusterIP

---

apiVersion: extensions/v1beta1

kind: Deployment

metadata:

  name: hello-message-app-deployment-v1

spec:

  replicas: 1

  template: # template for the pods

    metadata:

      labels:

        app: hello-message-app

        version: v1

    spec:

      containers:

      - name: hello-message-app

        image: pmusale/kubecanary:1.0

        imagePullPolicy: Always

        ports:

        - containerPort: 8888

---

apiVersion: extensions/v1beta1

kind: Deployment

metadata:

  name: hello-message-app-deployment-v2

spec:

  replicas: 1

  template: # template for the pods

    metadata:

      labels:

        app: hello-message-app

        version: v2

    spec:

      containers:

      - name: hello-message-app

        image: pmusale/kubecanary:2.0

        imagePullPolicy: Always

        ports:

        - containerPort: 8888

---
