istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3

kind: Gateway

metadata:

  name: istio-canary-gateway

spec:

  selector:

    istio: ingressgateway # use istio default controller

  servers:

  - port:

      number: 80

      name: http

      protocol: HTTP

    hosts:

    - "*"

---

apiVersion: networking.istio.io/v1alpha3

kind: VirtualService

metadata:

  name: kube-canary-app

spec:

  hosts:

  - "*"

  gateways:

  - istio-canary-gateway

  http:

  - route:

    - destination:

        host: kube-canary-app

        port:

          number: 8080

---
