mandelbrot-ingress-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-canary-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "mandelbrot.gcp.gsk.hclcnlabs.com"

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-service-route-mandelbrot-1
  namespace: mandelbrot2
spec:
  hosts:
  - "mandelbrot.gcp.gsk.hclcnlabs.com"
  gateways:
  - istio-canary-gateway
  http:
  - route:
    - destination:
        host: mandelbrot
        port:
          number: 8080

---

#https://istio.io/latest/docs/tasks/traffic-management/ingress/
